Fix IONOS hosting compatibility and production deployment
- Fixed duplicate .htaccess rules causing conflicts
- Simplified bot protection to prevent blocking legitimate users
- Created production-safe bot-blocker.php that only blocks obvious automated tools
- Added index.php entry point for better hosting compatibility
- Removed aggressive checks that were causing 'automated source' errors
- Optimized for IONOS hosting environment
- Cleaned up test files and improved project structure

--- a/php-version/.htaccess
+++ b/php-version/.htaccess
@@ -1,23 +1,15 @@
 RewriteEngine On
 
-# Redirect root to app.php
-RewriteRule ^$ app.php [QSA,L]
+# Redirect root to he-opas.html (landing page)
+RewriteRule ^$ he-opas.html [QSA,L]
 
-# Redirect to app.php if file doesn't exist (except for he-opas.html)
+# Allow direct access to HTML files
+RewriteCond %{REQUEST_URI} \.(html)$
+RewriteRule ^(.*)$ $1 [L]
+
+# Redirect all other requests to app.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !^/he-opas\.html$
-RewriteRule ^(.*)$ app.php [QSA,L]
-
-RewriteEngine On
-
-# Redirect root to app.php
-RewriteRule ^$ app.php [QSA,L]
-
-# Redirect to app.php if file doesn't exist (except for he-opas.html)
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !^/he-opas\.html$
 RewriteRule ^(.*)$ app.php [QSA,L]
 
 # Security headers
@@ -38,16 +30,11 @@ Options -Indexes
     Deny from all
 </Files>
 
-# Allow access to HTML template
-<Files "he-opas.html">
+# Allow access to HTML and PHP files
+<Files ~ "\.(html|php)$">
     Order allow,deny
     Allow from all
 </Files>
-
-# Disable directory browsing
-Options -Indexes
-
-# Hide sensitive files
 <Files ~ "\.(log|env|ini)$">
     Order allow,deny
     Deny from all
