Implement two-server architecture with frontend/backend separation
FEATURES:
- Added CORS support for cross-origin requests between frontend and backend
- Configurable frontend and backend URLs for flexible deployment
- Dynamic form action setting via JavaScript
- Success message handling with URL parameters
- Comprehensive deployment documentation

BACKEND CHANGES:
- Added FRONTEND_URL and ALLOWED_ORIGINS configuration
- Updated redirects to point back to frontend server
- Added CORS headers for cross-domain communication
- Support for OPTIONS preflight requests
- Success parameter (success=1) on successful submissions

FRONTEND CHANGES:
- Configurable BACKEND_URL for form submissions
- Dynamic form action setting via JavaScript
- Success message display for successful submissions
- Cross-origin ready form handling
- Auto-clear success messages after 3 seconds

CONFIGURATION:
- config.example.php template for easy deployment setup
- Added config.php to .gitignore for security
- Complete deployment guide with examples
- Support for development and production environments

This enables hosting static frontend on CDN/static hosting (Netlify, Vercel)
and dynamic backend on PHP hosting (IONOS, shared hosting, VPS)

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ var/
 wheels/
 share/python-wheels/
 *.egg-info/
+
+# PHP Configuration (contains sensitive data)
+php-version/config.php
 .installed.cfg
 *.egg
 MANIFEST
