Fix PHP redirect issues and prevent source code display
CRITICAL FIXES:
- Added output buffering to prevent headers already sent errors
- Implemented multiple redirect methods (PHP header + JavaScript + Meta refresh)
- Added buffer clearing before redirects to ensure clean headers
- Enhanced error logging for redirect debugging

DEBUGGING TOOLS:
- Created phptest.php for PHP configuration testing
- Added redirect-test.php for simple redirect functionality testing
- Improved .htaccess with PHP processing directives
- Added comprehensive redirect logging

REDIRECT IMPROVEMENTS:
- Clear output buffer before each redirect attempt
- Fallback JavaScript redirect if PHP headers fail
- Meta refresh backup for non-JavaScript browsers
- Manual link fallback for complete compatibility
- Explicit exit() calls to prevent code execution after redirect

SECURITY:
- Output buffering prevents accidental code display
- Multiple redirect layers ensure proper form handling
- Maintains CORS and cross-server functionality

This resolves the issue where PHP code was displayed in browser
while Telegram notifications worked correctly.

--- a/php-version/.htaccess
+++ b/php-version/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine On
 
+# Force PHP processing for .php files
+AddType application/x-httpd-php .php
+AddHandler php7-script .php
+
 # Prevent direct access to app.php (only allow POST requests)
 <Files "app.php">
     <RequireAll>
